--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scripts": "^5.0.1",
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.1.3",
+    "react-use-websocket": "^4.5.0",
     "react18-input-otp": "^1.1.3",
     "redux": "^4.2.1",
     "simplebar": "^6.2.5",
