--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/colors": "^7.0.0",
     "@ant-design/icons": "^5.0.1",
+    "@apollo/client": "^3.8.8",
     "@emotion/cache": "^11.10.7",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -14,6 +15,8 @@
     "@mui/x-date-pickers": "^6.10.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^7.0.0",
+    "apollo-client": "^2.6.10",
+    "apollo-link-ws": "^1.0.20",
     "axios": "^1.3.5",
     "buffer": "^6.0.3",
     "chance": "^1.1.11",
@@ -21,6 +24,7 @@
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -45,6 +49,7 @@
     "simplebar-react": "^3.2.4",
     "stream-browserify": "^3.0.0",
     "stylis-plugin-rtl": "^2.1.1",
+    "subscriptions-transport-ws": "^0.9.19",
     "tailwindcss": "^3.3.3",
     "util": "^0.12.5",
     "web-vitals": "^3.3.1",
