--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "subscriptions-transport-ws": "^0.9.19",
     "tailwindcss": "^3.3.3",
     "util": "^0.12.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.3.1",
     "yup": "^1.1.1"
   },
