--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/colors": "^7.0.0",
     "@ant-design/icons": "^5.0.1",
     "@apollo/client": "^3.8.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/cache": "^11.10.7",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
