--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chance": "^1.1.11",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
+    "electron": "^28.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
     "graphql": "^15.8.0",
