--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "chance": "^1.1.11",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
-    "electron": "^28.0.0",
+    "electron-is-dev": "^2.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
     "graphql": "^15.8.0",
@@ -87,8 +87,13 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1",
     "postcss-cli": "^10.1.0",
     "prettier": "^2.8.7",
-    "react-error-overlay": "6.0.11"
+    "react-error-overlay": "6.0.11",
+    "wait-on": "^7.2.0"
   }
 }
